# twitter_api_clone

./: .gitignore  Cargo.toml  README.md
migrations/2021-05-24-191308_initial_schema/: down.sql  up.sql
migrations/2021-05-29-175931_likes_table/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.rs
