[package]
name = "twitter-api"
version = "0.1.0"
authors = ["Ramana Venkata <vramana@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres", "extras"] }
dotenv = "0.15.0"
eyre = "0.6.5"
anyhow = "1.0"
r2d2 = "0.8.9"
chrono = "0.4"
bcrypt = "0.9"
